fix: responsive about on tablet

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -533,7 +533,7 @@ header{
     }
     .about_portrait{
         left: 9%;
-        top: 84%;
+        top: 94%;
     }
     .gallery{
         grid-column-gap: 67px;
